--- a/includes/map_styles.css
+++ b/includes/map_styles.css
@@ -22,6 +22,7 @@ html, body {
 	padding-top: 20%;
 }
 #header {
+	border-bottom: 3px solid #EEE;
 	background-image: url("../img/apple-icon.png");
 	background-repeat: no-repeat;
 	background-size: 50px;
@@ -35,7 +36,7 @@ h2 {
 
 h1 {
 	font-size: 1.5em;
-  	color: #222;
+  	color: #444;
   	padding: 12px;
   	margin: 0px 0px 0px 50px;
 }
